fix: remove transforms applied on playerbutton and fullscreen on mobile because the buttons area already transformed by applying transform on the rightpanel container

--- a/src/style/styles.less
+++ b/src/style/styles.less
@@ -1970,11 +1970,6 @@ input {
 
 /*------------------Interface-------------------*/
 @media screen and (min-height: 200px) and (max-height: 479px) and (orientation: landscape) {
-	#ui {
-		#fullscreen {
-			transform: scale(0.55) translate(121px, -31px);
-		}
-	}
 	#queue {
 		transform: scale(0.55) translate(-335px, -40px);
 	}
@@ -1985,12 +1980,9 @@ input {
 		transform: scale(0.55) translate(-32px, -130px);
 	}
 	#rightpanel {
-		transform: scale(0.55) translate(48px, -212px);
+		transform: scale(0.55) translate(40px, -170px);
 	}
-	#playerbutton {
-		transform: scale(0.55) translate(39px, -39px);
-	}
-
+	
 	#scoreboardTitle {
 		font-size: medium;
 		margin: 0px !important;
@@ -2024,19 +2016,11 @@ input {
 	#queue {
 		transform: scale(0.7) translate(-174px, -20px);
 	}
-	#ui {
-		#fullscreen {
-			transform: scale(0.7) translate(63px, -16px);
-		}
-	}
-	#playerbutton {
-		transform: scale(0.7) translate(20px, -20px);
-	}
 	#leftpanel {
 		transform: scale(0.7) translate(-16px, -68px);
 	}
 	#rightpanel {
-		transform: scale(0.7) translate(25px, -111px);
+		transform: scale(0.7) translate(22px, -89px);
 	}
 	#bottompanel {
 		transform: scale(0.7);
